--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>{{ $config.system_title }}</title>
+  <title>{{ $config.system_title }}</title> 
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_830376_qzecyukz0s.css">
 </head>
 
